--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=${PORT:8080}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/meet
-spring.datasource.username=root
-spring.datasource.password=
-#spring.datasource.url=jdbc:mysql://y9qea1c0p2xo3zcm:zy0tvbupq84hntfx@dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/suc50fpj82o3dxqr
-#spring.datasource.username=y9qea1c0p2xo3zcm
-#spring.datasource.password=zy0tvbupq84hntfx
+#spring.datasource.url=jdbc:mysql://localhost:3306/meet
+#spring.datasource.username=root
+#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://n20ugxjbjyo2yiy5:lowuhb620xx3m1fg@dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/hai24bipahfkg8fz
+spring.datasource.username=n20ugxjbjyo2yiy5
+spring.datasource.password=lowuhb620xx3m1fg
 
 
 spring.jpa.show-sql: true
