--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.url=jdbc:mysql://n20ugxjbjyo2yiy5:lowuhb620xx3m1fg@dcrhg4kh56j
 spring.datasource.username=n20ugxjbjyo2yiy5
 spring.datasource.password=lowuhb620xx3m1fg
 
+spring.datasource.test-while-idle=true
+spring.datasource.validation-query=SELECT 1;
+spring.datasource.time-between-eviction-runs-millis=60000
 
 spring.jpa.show-sql: true
 
