--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-server.port=${PORT:8080}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/meet
 #spring.datasource.username=root
 #spring.datasource.password=
@@ -8,9 +12,7 @@ spring.datasource.url=jdbc:mysql://n20ugxjbjyo2yiy5:lowuhb620xx3m1fg@dcrhg4kh56j
 spring.datasource.username=n20ugxjbjyo2yiy5
 spring.datasource.password=lowuhb620xx3m1fg
 
-spring.datasource.test-while-idle=true
-spring.datasource.validation-query=SELECT 1;
-spring.datasource.time-between-eviction-runs-millis=60000
+
 
 spring.jpa.show-sql: true
 
