--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.generate-ddl=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/meet
 #spring.datasource.username=root
 #spring.datasource.password=
-spring.datasource.url=jdbc:mysql://n20ugxjbjyo2yiy5:lowuhb620xx3m1fg@dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/hai24bipahfkg8fz
-spring.datasource.username=n20ugxjbjyo2yiy5
-spring.datasource.password=lowuhb620xx3m1fg
+#spring.datasource.url=jdbc:mysql://n20ugxjbjyo2yiy5:lowuhb620xx3m1fg@dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/hai24bipahfkg8fz
+#spring.datasource.username=n20ugxjbjyo2yiy5
+#spring.datasource.password=lowuhb620xx3m1fg
 
 
 
