--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/meet
 #spring.datasource.username=root
 #spring.datasource.password=
-spring.datasource.url=jdbc:mysql://n20ugxjbjyo2yiy5:lowuhb620xx3m1fg@dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/hai24bipahfkg8fz
-spring.datasource.username=n20ugxjbjyo2yiy5
-spring.datasource.password=lowuhb620xx3m1fg
+#spring.datasource.url=jdbc:mysql://nnsgluut5mye50or.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/utf9zq5vfcv2q8sd
+#spring.datasource.username=pumk3tz4esvc5m6a
+#spring.datasource.password=y3ieue1e1ju01rpi
 
 
 
