--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ dbheroku.datasource.url=8YW+Kr/6teNnj5x50ZzbPv6gzzr1KXAKPO85/1hxNcA6KGzwt8Tzr/Zx
 dbheroku.datasource.username=LpAGOVE1ZwT4I30NHWfNVA==
 dbheroku.datasource.password=C7kL2UFbonz7zXp7yW9jv+ChtlpBG/RcyTcTohs3GMg=
 
-dashboard.url=http://localhost:8000
+#dashboard.url=http://localhost:8000
 #dashboard.url=https://meetdashboard.up.railway.app
-#dashboard.url=https://meetdashboard.herokuapp.com
+dashboard.url=https://meetdashboard.herokuapp.com
