--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
-
+server.servlet.session.timeout=1000m
 spring.jpa.show-sql: true
 mybatis.mapper-locations=classpath:com/example/meetfake/mapper/sql/*xml
 mybatis.type-aliases-package=com.example.meetfake.model
